# win-does

./: CHANGELOG.md  LICENSE  README.md  win-does.cabal
examples/: keyboard-example.hs  mouse-example.hs
src/: System.hs
src/System/: Keyboard.hs  Mouse.hs
